Fix search dropdown z-index

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -68,6 +68,7 @@ body {
 	left: 20%;
 	width: 60%;
 	text-align: start;
+	z-index: 3;
 }
 
 .suggestion {
